--- a/sistema-examenes-frontend/src/app/views/login/login.component.html
+++ b/sistema-examenes-frontend/src/app/views/login/login.component.html
@@ -7,14 +7,14 @@
                         <img src="assets/user-interface.png" width="100" height="100">
                     </div>
                     <h1 class="text-center">Iniciar Sesión</h1>
-                    <form action="">
+                    <form (ngSubmit)="formSubmit()">
                         <mat-form-field class="full-width" appearance="outline">
                             <mat-label>Nombre de usuario</mat-label>
-                            <input required matInput placeholder="Escriba su nombre de usuario...">
+                            <input [(ngModel)]="loginData.username" name="username" required matInput placeholder="Escriba su nombre de usuario...">
                         </mat-form-field>
                         <mat-form-field class="full-width" appearance="outline">
                             <mat-label>Contraseña</mat-label>
-                            <input required type="password" matInput placeholder="Escriba su contraseña...">
+                            <input [(ngModel)]="loginData.password" name="password" required type="password" matInput placeholder="Escriba su contraseña...">
                         </mat-form-field>
                         <div class="container text-center">
                             <button mat-raised-button color="primary">Iniciar Sesión</button>
