--- a/sistema-examenes-frontend/src/app/views/login/login.component.html
+++ b/sistema-examenes-frontend/src/app/views/login/login.component.html
@@ -17,8 +17,8 @@
                             <input [(ngModel)]="loginData.password" name="password" required type="password" matInput placeholder="Escriba su contraseña...">
                         </mat-form-field>
                         <div class="container text-center">
-                            <button mat-raised-button color="primary">Iniciar Sesión</button>
-                            <button type="reset" style="margin-left: 20px;" mat-raised-button color="accent">Limpiar Campos</button>
+                            <button style="margin: 10px;" mat-raised-button color="primary">Iniciar Sesión</button>
+                            <button style="margin: 10px;" type="reset" mat-raised-button color="accent">Limpiar Campos</button>
                         </div>
                     </form>
                 </mat-card>
