--- a/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.html
@@ -1,11 +1,14 @@
-<mat-card>
-    <mat-list>
-        <div mat-subheader>
-            Todas las categorias
-        </div>
-        <mat-list-item *ngFor="let c of categorias">
-            <div mat-line>{{ c.titulo }}</div>
-            <div>{{ c.descripcion }}</div>
-        </mat-list-item>
-    </mat-list>
-</mat-card>
+<div class="card">
+    <div>
+        <h1>Todas las categorias</h1>
+    </div>
+    <ul class="list-group">
+        <li class="list-group-item" *ngFor="let c of categorias">
+            <p>{{ c.titulo }}</p>
+            <p>{{ c.descripcion }}</p>
+        </li>
+    </ul>
+    <div class="container text-center mt20">
+        <button class="btn btn-primary">Agregar categoria</button>
+    </div>
+</div>
