Agregar categorias completado

--- a/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.css
+++ b/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.css
@@ -5,3 +5,16 @@
 h1 {
     font-weight: bold;
 }
+
+.titulo {
+    font-size: large;
+    font-weight: bolder;
+}
+
+.container {
+    padding-top: 20px;
+}
+
+.imagen {
+    width: 50px;
+}
