--- a/sistema-examenes-frontend/src/app/views/profile/profile.component.html
+++ b/sistema-examenes-frontend/src/app/views/profile/profile.component.html
@@ -1,5 +1,5 @@
-<mat-card style="margin-left: 10px;">
-    <h1 style="margin: 10px;">Detalles del perfil</h1>
+<div class="card">
+    <h1>Detalles del perfil</h1>
     <mat-card-content>
         <div class="bootstrap-wrapper">
             <div class="container">
@@ -41,4 +41,4 @@
             <button style="margin: 5px;" mat-raised-button color="accent">Compartir</button>
         </mat-card-actions>
     </mat-card-content>
-</mat-card>
+</div>
