--- a/sistema-examenes-frontend/src/app/views/profile/profile.component.css
+++ b/sistema-examenes-frontend/src/app/views/profile/profile.component.css
@@ -14,3 +14,11 @@
     padding: 15px 10px;
     border: 0.5px solid gainsboro;
 }
+
+.card {
+    padding: 20px;
+}
+
+h1 {
+    font-weight: bold;
+}
