--- a/sistema-examenes-frontend/src/app/views/admin/sidebar/sidebar.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<div class="card" style="border-right: 2px solid grey; height: 85vh;">
     <mat-action-list>
         <div mat-subheader>Menu</div>
         <button mat-list-item routerLink="/admin">
@@ -23,4 +23,4 @@
             <mat-icon mat-list-icon>logout</mat-icon> Logout
         </button>
     </mat-action-list>
-</mat-card>
+</div>
