--- a/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.css
+++ b/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.css
@@ -1,9 +1,14 @@
 .card {
     padding: 20px;
+    margin-top: 10px;
 }
 
 h1 {
     font-weight: bold;
+}
+
+.entero {
+    margin: 20px;
 }
 
 .titulo {
