--- a/sistema-examenes-frontend/src/app/app.component.html
+++ b/sistema-examenes-frontend/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="adio"><app-navbar></app-navbar></div>
+
+
+<div class="hola">
+<router-outlet></router-outlet></div>
