--- a/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.html
@@ -3,12 +3,12 @@
         <h1>Todas las categorias</h1>
     </div>
     <ul class="list-group">
-        <li class="list-group-item container" *ngFor="let c of categorias">
-            <div class="row">
+        <li class="list-group-item" *ngFor="let c of categorias">
+            <div class="row d-flex align-items-center">
                 <div class="col">
-                    <img class="d-flex justify-content-end imagen" src="assets/grid.svg" alt="">
+                    <img class="imagen" src="assets/grid.svg" alt="">
                 </div>
-                <div class="col-11">
+                <div class="col-11 ">
                     <p class="titulo">{{ c.titulo }}</p>
                     <p class="descripcion">{{ c.descripcion }}</p>
                 </div>
