--- a/sistema-examenes-frontend/src/app/app.component.html
+++ b/sistema-examenes-frontend/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div class="adio"><app-navbar></app-navbar></div>
-
-
-<div class="hola">
-<router-outlet></router-outlet></div>
+<div class="todo">
+    <div class="adio">
+        <app-navbar></app-navbar>
+    </div>
+    <div class="hola">
+        <router-outlet></router-outlet>
+    </div>
+</div>
