--- a/sistema-examenes-frontend/src/app/views/admin/sidebar/sidebar.component.css
+++ b/sistema-examenes-frontend/src/app/views/admin/sidebar/sidebar.component.css
@@ -2,3 +2,9 @@
     padding: 20px;
     margin-top: 10px;
 }
+
+.titulo {
+    font-weight: bolder;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
