--- a/sistema-examenes-frontend/src/app/views/admin/sidebar/sidebar.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
-<div class="card" style="border-right: 2px solid grey; height: 85vh;">
+<div class="card">
     <mat-action-list>
-        <div mat-subheader>Menu</div>
+        <div class="titulo">Menu</div>
         <button mat-list-item routerLink="/admin">
             <mat-icon mat-list-icon>home</mat-icon> Inicio
         </button>
@@ -13,10 +13,10 @@
         <button mat-list-item routerLink="/admin/add-categoria">
             <mat-icon mat-list-icon>add_circle_outline</mat-icon> Agregar Categoría
         </button>
-        <button mat-list-item routerLink="/admin/profile">
+        <button mat-list-item routerLink="/admin/examenes">
             <mat-icon mat-list-icon>quiz</mat-icon> Exámenes
         </button>
-        <button mat-list-item routerLink="/admin/profile">
+        <button mat-list-item routerLink="/admin/add-examen">
             <mat-icon mat-list-icon>add</mat-icon> Agregar Exámen
         </button>
         <button mat-list-item routerLink="/admin/profile">
