--- a/sistema-examenes-frontend/src/styles.css
+++ b/sistema-examenes-frontend/src/styles.css
@@ -9,7 +9,10 @@ body {
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    background: #f5f5f5;
+}
+
+.mat-typography {
+    background-color: rgb(204, 204, 204);
 }
 
 .text-center {
