--- a/sistema-examenes-frontend/src/app/views/admin/actualizar-examen/actualizar-examen.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/actualizar-examen/actualizar-examen.component.html
@@ -1,40 +1,40 @@
 <div class="card">
-    <h1>Agregar nuevo examen</h1>
+    <h1>Actualizar examen</h1>
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <form (ngSubmit)="guardarExamen()">
+            <form *ngIf="examen" (submit)="actualizarExamen()">
                 <mat-form-field class="w100" appearance="fill">
                     <mat-label>Título</mat-label>
-                    <input [(ngModel)]="examenData.titulo" type="text" name="titulo" placeholder="Escriba el titulo"
+                    <input [(ngModel)]="examen.titulo" type="text" name="titulo" placeholder="Escriba el titulo"
                         matInput required>
                 </mat-form-field>
                 <mat-form-field class="w100" appearance="fill">
                     <mat-label>Descripción</mat-label>
-                    <textarea [(ngModel)]="examenData.descripcion" type="text" name="descripcion"
+                    <textarea [(ngModel)]="examen.descripcion" type="text" name="descripcion"
                         placeholder="Escriba la descripción" matInput rows="8"></textarea>
                 </mat-form-field>
                 <div class="row">
                     <div class="col-md-6">
                         <mat-form-field class="w100" appearance="fill">
                             <mat-label>Puntos Máximos</mat-label>
-                            <input [(ngModel)]="examenData.puntosMaximos" type="text" name="puntosMaximos"
+                            <input [(ngModel)]="examen.puntosMaximos" type="text" name="puntosMaximos"
                                 placeholder="Escriba la cantidad de puntos" matInput>
                         </mat-form-field>
                     </div>
                     <div class="col-md-6">
                         <mat-form-field class="w100" appearance="fill">
                             <mat-label>Número de preguntas</mat-label>
-                            <input [(ngModel)]="examenData.numeroDePreguntas" type="text" name="numeroDePreguntas"
+                            <input [(ngModel)]="examen.numeroDePreguntas" type="text" name="numeroDePreguntas"
                                 placeholder="Escriba el numero de preguntas" matInput>
                         </mat-form-field>
                     </div>
                 </div>
-                <mat-slide-toggle class="mt20" name="activo" [(ngModel)]="examenData.activo" color="primary">
+                <mat-slide-toggle class="mt20" name="activo" [(ngModel)]="examen.activo" color="primary">
                     Estado de publición
                 </mat-slide-toggle>
                 <mat-form-field appearance="fill" class="mt20 w100">
                     <mat-label>Categorías</mat-label>
-                    <mat-select name="categoria" [(ngModel)]="examenData.categoria.categoriaId">
+                    <mat-select name="categoria" [(ngModel)]="examen.categoria.categoriaId">
                         <mat-option *ngFor="let c of categorias" [value]="c.categoriaId">
                             {{ c.titulo }}
                         </mat-option>
@@ -42,7 +42,7 @@
                 </mat-form-field>
                 <div class="container text-center">
                     <button routerLink="/admin/examenes" class="btn btn-primary mr20">Volver</button>
-                    <button class="btn btn-primary">Guardar</button>
+                    <button class="btn btn-primary">Actualizar</button>
                 </div>
             </form>
         </div>
