--- a/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div>
-        <h1>Todas las categorias</h1>
+        <h1>Categorias</h1>
     </div>
     <ul class="list-group">
         <li class="list-group-item" *ngFor="let c of categorias">
