--- a/sistema-examenes-frontend/src/app/views/admin/view-examenes/view-examenes.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/view-examenes/view-examenes.component.html
@@ -16,11 +16,12 @@
 
 
     <div class="card-body">
-        <button class="btn btn-primary">Preguntas</button>
+        <button class="btn btn-primary" [routerLink]="'/admin/ver-preguntas/' + e.examenId + '/' + e.titulo">Preguntas</button>
         <button class="btn btn-secondary ml20">Puntos máximos {{ e.puntosMaximos }}</button>
         <button class="btn btn-secondary ml20">Preguntas {{ e.numeroDePreguntas }}</button>
-        <button class="btn btn-primary ml20">Actualizar</button>
+        <button [routerLink]="'/admin/examen/' + e.examenId " class="btn btn-primary ml20">Actualizar</button>
         <button class="btn btn-primary ml20">Intentos</button>
+        <button class="btn btn-danger ml20" (click)="eliminarExamen(e.examenId)">Eliminar</button>
     </div>
 </div>
 
