--- a/sistema-examenes-frontend/src/app/components/navbar/navbar.component.html
+++ b/sistema-examenes-frontend/src/app/components/navbar/navbar.component.html
@@ -1,18 +1,16 @@
 <mat-toolbar color="primary">
-    <a [routerLink]="'/'" mat-icon-button class="example-icon" arial-label="Example icon-button with menu icon">
-        <mat-icon>menu_books</mat-icon>
-    </a>
-    <span>Portal de exámenes</span>
+    <img src="../../../favicon.ico" alt="">
+    <span class="ml10">Portal de exámenes</span>
     <span class="example-spacer"></span>
-    <a *ngIf="!login.isLoggedIn()" [routerLink]="'/login'" class="link-light">
-        Iniciar sesión
-    </a>
-    <a *ngIf="!login.isLoggedIn()" [routerLink]="'/signup'" class="link-light ml20">
-        Registrar
-    </a>
-    <a *ngIf="login.isLoggedIn()" (click)="logout()" class="link-light ml20">
-        Cerrar Sesion
-    </a>
+    <button *ngIf="!login.isLoggedIn()" mat-button style="margin-right: 10px;" class="link-light ml20" [routerLink]="'/login'">
+        Iniciar Sesión
+    </button>
+    <button *ngIf="!login.isLoggedIn()" mat-button style="margin-right: 10px;" class="link-light ml20" [routerLink]="'/signup'">
+        Registrarse
+    </button>
+    <button *ngIf="login.isLoggedIn()" mat-button style="margin-right: 10px;" class="link-light ml20" (click)="logout()">
+        Cerrar Sesión
+    </button>
     <button *ngIf="login.isLoggedIn()" mat-button style="margin-right: 10px;" class="link-light ml20" routerLink="/admin/profile">
         {{ login.getUser().username }}
     </button>
