--- a/sistema-examenes-frontend/src/app/views/user/sidebar/sidebar.component.html
+++ b/sistema-examenes-frontend/src/app/views/user/sidebar/sidebar.component.html
@@ -1,9 +1,6 @@
 <div class="card">
     <mat-action-list>
-        <div class="titulo">Menu</div>
-        <button mat-list-item routerLink="/user-dashboard">
-            <mat-icon mat-list-icon>home</mat-icon> Inicio
-        </button>
+        <div class="titulo">Categorias</div>
         <!-- <button mat-list-item routerLink="/admin/profile">
             <mat-icon mat-list-icon>account_circle</mat-icon> Perfil
         </button>
@@ -13,8 +10,10 @@
         <button mat-list-item routerLink="/admin/add-categoria">
             <mat-icon mat-list-icon>add_circle_outline</mat-icon> Agregar Categoría
         </button> -->
-        <button mat-list-item routerLink="/admin/examenes">
-            <mat-icon mat-list-icon>quiz</mat-icon> Exámenes
+        <button mat-list-item routerLink="/user-dashboard/0">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M3.5 3.75a.25.25 0 0 1 .25-.25h13.5a.25.25 0 0 1 .25.25v10a.75.75 0 0 0 1.5 0v-10A1.75 1.75 0 0 0 17.25 2H3.75A1.75 1.75 0 0 0 2 3.75v16.5c0 .966.784 1.75 1.75 1.75h7a.75.75 0 0 0 0-1.5h-7a.25.25 0 0 1-.25-.25V3.75Z"></path><path d="M6.25 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5h-8.5Zm-.75 4.75a.75.75 0 0 1 .75-.75h4.5a.75.75 0 0 1 0 1.5h-4.5a.75.75 0 0 1-.75-.75Zm16.28 4.53a.75.75 0 1 0-1.06-1.06l-4.97 4.97-1.97-1.97a.75.75 0 1 0-1.06 1.06l2.5 2.5a.75.75 0 0 0 1.06 0l5.5-5.5Z"></path>
+            </svg>
+            <span class="ml10">Todos los Exámenes</span>
         </button>
         <!-- <button mat-list-item routerLink="/admin/add-examen">
             <mat-icon mat-list-icon>add</mat-icon> Agregar Exámen
@@ -22,8 +21,9 @@
         <button mat-list-item routerLink="/admin/profile">
             <mat-icon mat-list-icon>logout</mat-icon> Logout
         </button> -->
-        <button mat-list-item *ngFor="let c of categorias">
-            <mat-icon mat-list-icon>account_circle</mat-icon> {{ c.titulo }}
+        <button [routerLink]="'/user-dashboard/' + c.categoriaId" mat-list-item *ngFor="let c of categorias">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24"><path d="M7.024 3.75c0-.966.784-1.75 1.75-1.75H20.25c.966 0 1.75.784 1.75 1.75v11.498a1.75 1.75 0 0 1-1.75 1.75H8.774a1.75 1.75 0 0 1-1.75-1.75Zm1.75-.25a.25.25 0 0 0-.25.25v11.498c0 .139.112.25.25.25H20.25a.25.25 0 0 0 .25-.25V3.75a.25.25 0 0 0-.25-.25Z"></path><path d="M1.995 10.749a1.75 1.75 0 0 1 1.75-1.751H5.25a.75.75 0 1 1 0 1.5H3.745a.25.25 0 0 0-.25.25L3.5 20.25c0 .138.111.25.25.25h9.5a.25.25 0 0 0 .25-.25v-1.51a.75.75 0 1 1 1.5 0v1.51A1.75 1.75 0 0 1 13.25 22h-9.5A1.75 1.75 0 0 1 2 20.25l-.005-9.501Z"></path></svg>
+            <span class="ml10">{{ c.titulo }}</span>
         </button>
     </mat-action-list>
 </div>
