--- a/sistema-examenes-frontend/src/app/components/navbar/navbar.component.html
+++ b/sistema-examenes-frontend/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <img src="../../../favicon.ico" alt="">
-    <span class="ml10">Portal de exámenes</span>
+    <span class="ml10">CodeQuiz</span>
     <span class="example-spacer"></span>
     <button *ngIf="!login.isLoggedIn()" mat-button style="margin-right: 10px;" class="link-light ml20" [routerLink]="'/login'">
         Iniciar Sesión
