--- a/sistema-examenes-frontend/src/app/views/login/login.component.html
+++ b/sistema-examenes-frontend/src/app/views/login/login.component.html
@@ -17,7 +17,7 @@
                             <input [(ngModel)]="loginData.password" class="form-control" name="password" required type="password" matInput placeholder="Escriba su contraseña...">
                         </div>
                         <div class="container text-center mt-3">
-                            <button style="margin: 10px;" class="btn btn-success">Iniciar Sesión</button>
+                            <button style="margin: 10px;" class="btn btn-success" type="submit">Iniciar Sesión</button>
                             <button style="margin: 10px;" class="btn btn-danger" type="reset">Limpiar Campos</button>
                         </div>
                     </form>
