--- a/sistema-examenes-frontend/src/app/views/admin/welcome/welcome.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/welcome/welcome.component.html
@@ -1,28 +1,26 @@
 <div class="card">
-    <div class="container">
-     <div class="row">
-       <div class="col-md-12">
-        <div class="title">
-            Bienvenido administrador
-        </div>
-         <mat-card-subtitle>Panel de administrador</mat-card-subtitle>
-         <mat-card-content class="ml30">
-           <h1></h1>
-           <p></p>
-           <mat-divider></mat-divider>
-           <br>
-           <h1>Sus funciones : </h1>
-           <ul>
-             <li>Gestionar las	categorías</li>
-             <li>Gestionar los exámenes</li>
-             <li>Asignar exámenes a distintas categorías</li>
-             <li>Gestionar las preguntas</li>
-             <li>Asignar preguntas a cada examen</li>
-           </ul>
-           <mat-divider></mat-divider>
-           <br>
-         </mat-card-content>
-       </div>
-     </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Bienvenido administrador</h1>
+        <mat-card-subtitle>Panel de administrador</mat-card-subtitle>
+        <mat-card-content class="ml30">
+          <h1></h1>
+          <p></p>
+          <mat-divider></mat-divider>
+          <br>
+          <h1>Sus funciones : </h1>
+          <ul>
+            <li>Gestionar las categorías</li>
+            <li>Gestionar los exámenes</li>
+            <li>Asignar exámenes a distintas categorías</li>
+            <li>Gestionar las preguntas</li>
+            <li>Asignar preguntas a cada examen</li>
+          </ul>
+          <mat-divider></mat-divider>
+          <br>
+        </mat-card-content>
+      </div>
     </div>
+  </div>
 </div>
