--- a/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.html
@@ -1,21 +1,22 @@
-<div class="card">
-    <div>
-        <h1>Categorias</h1>
-    </div>
-    <ul class="list-group">
-        <li class="list-group-item" *ngFor="let c of categorias">
-            <div class="row d-flex align-items-center">
-                <div class="col">
-                    <img class="imagen" src="assets/grid.svg" alt="">
-                </div>
-                <div class="col-11 ">
-                    <p class="titulo">{{ c.titulo }}</p>
-                    <p class="descripcion">{{ c.descripcion }}</p>
-                </div>
+<div class="card" *ngFor="let c of categorias">
+    <div class="row">
+        <div class="col-1">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-columns-gap examenImage" viewBox="0 0 16 16">
+                <path
+                    d="M6 1v3H1V1h5zM1 0a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1H1zm14 12v3h-5v-3h5zm-5-1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5zM6 8v7H1V8h5zM1 7a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H1zm14-6v7h-5V1h5zm-5-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h5a1 1 0 0 0 1-1V1a1 1 0 0 0-1-1h-5z" />
+            </svg>
+        </div>
+        <div class="col-11">
+            <div class="card-title">
+                {{ c.titulo }}
             </div>
-        </li>
-    </ul>
-    <div class="container text-center mt20">
-        <button routerLink="/admin/add-categoria" class="btn btn-primary">Agregar categoria</button>
+            <div class="card-subtitle">
+                {{ c.descripcion }}
+            </div>
+        </div>
     </div>
+</div>
+<div class="container text-center mt20">
+    <button routerLink="/admin/add-categoria" class="btn btn-primary">Agregar categoria</button>
 </div>
