--- a/sistema-examenes-frontend/src/app/views/admin/welcome/welcome.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/welcome/welcome.component.html
@@ -2,14 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h1>Bienvenido administrador</h1>
-        <mat-card-subtitle>Panel de administrador</mat-card-subtitle>
+        <h1>Panel de administrador</h1>
+        <p>¡Bienvenido, Profesor!</p>
+        <p>Nos complace darle la bienvenida a nuestro Portal de Exámenes, su herramienta de confianza para administrar exámenes teóricos de programación. Estamos comprometidos en ayudarle a simplificar y optimizar su proceso de evaluación, permitiéndole poner a prueba los conocimientos de sus alumnos de manera efectiva.</p>
+        <p>En este portal, encontrará un conjunto de funciones diseñadas específicamente para facilitar su labor de administración. Nuestro objetivo es brindarle una experiencia intuitiva y eficiente, permitiéndole enfocarse en lo más importante: el aprendizaje y la evaluación de sus estudiantes.</p>
         <mat-card-content class="ml30">
-          <h1></h1>
-          <p></p>
           <mat-divider></mat-divider>
           <br>
-          <h1>Sus funciones : </h1>
+          <h1>Sus funciones:</h1>
           <ul>
             <li>Gestionar las categorías</li>
             <li>Gestionar los exámenes</li>
