--- a/sistema-examenes-frontend/src/app/views/signup/signup.component.html
+++ b/sistema-examenes-frontend/src/app/views/signup/signup.component.html
@@ -45,8 +45,8 @@
                         </mat-form-field>
 
                         <div class="container text-center">
-                            <button mat-raised-button color="primary">Registrar</button>
-                            <button type="reset" style="margin-left: 20px;" mat-raised-button color="accent">Limpiar
+                            <button class="btn btn-primary">Registrar</button>
+                            <button type="reset" style="margin-left: 20px;" class="btn btn-danger">Limpiar
                                 Campos</button>
                         </div>
                     </form>
