--- a/sistema-examenes-frontend/src/app/views/admin/add-pregunta/add-pregunta.component.html
+++ b/sistema-examenes-frontend/src/app/views/admin/add-pregunta/add-pregunta.component.html
@@ -49,6 +49,7 @@
                         </mat-form-field>
                         <div class="container text-center">
                             <button class="btn btn-primary">Añadir</button>
+                            <button class="btn btn-primary ml20" routerLink="/admin/examenes">Volver</button>
                         </div>
                     </form>
                 </div>
