--- a/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.css
+++ b/sistema-examenes-frontend/src/app/views/admin/view-categorias/view-categorias.component.css
@@ -24,3 +24,37 @@ h1 {
 .imagen {
     width: 50px;
 }
+
+.card {
+    padding: 20px;
+    margin-top: 10px;
+    box-shadow: 5px 5px 5px gray;
+}
+
+.example-header-image {
+    background-image: url('../../../../assets/examen.png');
+    background-size: cover;
+}
+
+.examenImage {
+    width: 50px;
+    height: 50px;
+    margin-left: 20px;
+}
+
+.card-title {
+    font-weight: bolder;
+    font-size: 40px;
+}
+
+.card-subtitle {
+    color: grey;
+    margin-top: 2%;
+    margin-left: 5px;
+    font-size: 20px;
+}
+
+.row {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
