--- a/sistema-examenes-frontend/src/app/views/profile/profile.component.css
+++ b/sistema-examenes-frontend/src/app/views/profile/profile.component.css
@@ -13,6 +13,8 @@
 .table tr td {
     padding: 15px 10px;
     border: 0.5px solid gainsboro;
+    font-size: larger;
+    font-weight: bold;
 }
 
 .card {
